# quasar-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.txt  error.txt  makefile  otool.txt  output.txt  wrapper.h
examples/: main.rs
qdb/examples/c/: batch.c  blob_get.c  blob_get_noalloc.c  blob_put.c  blob_update.c  connect.c  connect_ipv6.c  connect_many.c  connect_tcp.c  continuous.c  exp_batch_insert.c  expires.c  get_perf.c  int_add.c  int_basics.c  iterator.c  log_callback.c  remove.c  run_query.c  secure_connect.c  tags.c  timeseries.c  ts_batch_insert.c  tutorial.c
qdb/examples/cpp/: blob_get.cpp  insert_csv.cpp
qdb/include/qdb/: _attr.h  arrow_abi.h  batch.h  blob.h  blob.hpp  buffer.hpp  client.h  client.hpp  direct.h  direct.hpp  double.h  error.h  error.hpp  integer.h  integer.hpp  iterator.h  iterator.hpp  log.h  node.h  option.h  perf.h  prefix.h  prefix.hpp  query.h  query.hpp  string.h  suffix.h  suffix.hpp  tag.h  tag.hpp  timestamp.h  ts.h  ts.hpp  version.h
qdb/old/: libc++.1.0.dylib  libc++abi.1.0.dylib
src/: cluster.rs  cluster_endpoint.rs  error.rs  handle.rs  handle_const.rs  handler_credentials.rs  lib.rs  utils.rs  utils_ptr.rs
tests/: handle_tests.rs  mod.rs
