[package]
name = "quasar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = ["qdb/lib/**/*"]

[dependencies]
rug = "1.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[build-dependencies]
bindgen = "0.69.4"

[dependencies.gmp-mpfr-sys]
version = "1.6"
default-features = false
features = ["mpfr", "force-cross"]